force-app/main/default/objects/PPRS_MongoDB_Setting__mdt/PPRS_MongoDB_Setting__mdt.object-meta.xml
<CustomObject>
    <label>PPRS MongoDB Setting</label>
    <pluralLabel>PPRS MongoDB Settings</pluralLabel>
</CustomObject>