force-app/main/default/objects/PPRS_MongoDB_Setting__mdt/fields/Database__c.field-meta.xml
<CustomField>
    <fullName>Database__c</fullName>
    <label>Database</label>
    <length>255</length>
    <type>Text</type>
</CustomField>