force-app/main/default/objects/PPRS_MongoDB_Setting__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>https://data.mongodb-api.com/app/[SMTH]/endpoint/data/v1/</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>